cabal-version:      2.0
name:               bzip2-clib
version:            1.0.8
copyright:          (c) 2024 Julian Ospald
license:            BSD3
author:             Julian Ospald <hasufell@posteo.de>
maintainer:         Julian Ospald <hasufell@posteo.de>
category:           Codec
synopsis:           bzip2 C sources
description:
  Bundled C sources for use with various bzip2 Haskell bindings.

build-type:         Simple
extra-source-files: cbits/LICENSE

library
  default-language: Haskell2010
  includes:         bzlib.h
  c-sources:
    cbits/blocksort.c
    cbits/bzlib.c
    cbits/compress.c
    cbits/crctable.c
    cbits/decompress.c
    cbits/huffman.c
    cbits/randtable.c

  include-dirs:     cbits
  install-includes:
    bzlib.h
    bzlib_private.h
