cabal-version:   2.4
name:            bzip2-clib
version:         1.0.8
copyright:       (c) 2024 Julian Ospald
-- it's actually bzip2-1.0.6, but hackage is blocking it, so we just lie
-- https://github.com/haskell/hackage-server/issues/1294
license:         BSD-3-Clause
license-file:    cbits/LICENSE
author:          Julian Ospald <hasufell@posteo.de>
maintainer:      Julian Ospald <hasufell@posteo.de>
category:        Codec
synopsis:        bzip2 C sources
description:
  Bundled C sources for use with various bzip2 Haskell bindings.
  
  ⚠️ This is the least worst option for people who desperately need to provide the C sources as part of the cabal build system. This way, the bundled C code is made explicit in the dependency tree and can be updated if / when CVE are discovered. 
  Do not rely on such a mechanism if having the C libraries provided by your package manager is an acceptable solution. 

  This is a last recourse option that should not be made a standard practice.

build-type:      Simple
extra-doc-files: CHANGELOG.md
                 README.md

source-repository head
  type:     git
  location: https://github.com/hasufell/bzip2-clib.git

source-repository this
  type:     git
  location: https://github.com/hasufell/bzip2-clib.git
  tag:      1.0.8

library
  default-language: Haskell2010
  includes:         bzlib.h
  c-sources:
    cbits/blocksort.c
    cbits/bzlib.c
    cbits/compress.c
    cbits/crctable.c
    cbits/decompress.c
    cbits/huffman.c
    cbits/randtable.c

  include-dirs:     cbits
  install-includes:
    bzlib.h
    bzlib_private.h
